--- a/BudgetMssql/appsettings.json
+++ b/BudgetMssql/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=budget;User Id=sa;Password=ErcSorrow81;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=192.168.1.4;Database=budget;User Id=sa;Password=2ErcSorrow1981;MultipleActiveResultSets=true"
     },
     "Logging": {
     "IncludeScopes": false,
